<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        android:maxLength="@integer/task_title_max"
        android:inputType="textCapSentences"/>
    <TextView
        android:id="@+id/lblCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="15dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/txtTitle"/>
    <Spinner
        android:id="@+id/spCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCourse"/>
    <TextView
        android:id="@+id/lblAlarmDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_alarm_date"
        android:textSize="15dp"
        android:layout_below="@+id/spCourses"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
    <diso.rabbit.controls.ButtonExtends
        android:id="@+id/btnAlarmDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spCourses"
        android:paddingBottom="10dp"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description"
        android:layout_below="@+id/lblAlarmDate"
        android:lines="5"
        android:maxLength="@integer/task_description_max"/>
</RelativeLayout>